Add mobile measurement point photos and themes
